# BobTheBuilderTestApp

./: Cargo.toml  README.md  Trunk.toml  index.html
.cargo/: config.toml
src/: counter.rs  gameplay_area.rs  main.rs  ui.rs
src/counter/: mod.rs
