[package]
name = "button-clicker"
version = "0.1.0"
edition = "2021"

# Pinned intentionally: the Bevy Knowledge Provider reads this (and Cargo.lock,
# generated on first `cargo build`) to inject version-correct API facts.
# default-features = false keeps the build headless so it compiles in a plain
# rust container with no display / audio system libraries.
[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_state"] }
