[package]
name = "button-clicker"
version = "0.1.0"
edition = "2021"

# The Bevy Knowledge Provider reads this (and Cargo.lock, generated on first
# `cargo build`) to inject version-correct API facts.
#
# This app now renders a real on-screen UI (issue #9), so the render/UI/text
# feature stack is enabled explicitly (default-features stays off so we opt in
# to exactly what we use). `default_font` embeds a font so text needs no asset
# loading.
#
# The render backend is split by target so the same crate builds both ways
# (BuilderBot live preview, NEXT-STEPS §6): native gets winit's `x11` Linux
# backend (used by `cargo build`/`test` verify), wasm gets `webgl2`. Cargo
# UNIONS features across a crate's declarations, so the common stack below plus
# the per-target feature compose into one dependency.
[dependencies]
bevy = { version = "0.15", default-features = false, features = [
  "bevy_state",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_ui",
  "bevy_text",
  "bevy_winit",
  "default_font",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.15", default-features = false, features = ["x11"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.15", default-features = false, features = ["webgl2"] }
# getrandom (pulled transitively via rand) needs its browser backend on wasm; the
# `wasm_js` feature pairs with the `getrandom_backend` cfg in .cargo/config.toml.
getrandom = { version = "0.3", features = ["wasm_js"] }
